<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/configuration_category_title"
        app:summary="@string/configuration_category_summary">
        <EditTextPreference
            app:key="device_name"
            app:title="@string/device_name_setting_title"
            app:summary="@string/device_name_setting_summary"
            app:useSimpleSummaryProvider="false" />
        <EditTextPreference
            app:key="lock_uuid"
            app:title="@string/lock_uuid_setting_title"
            app:summary="@string/lock_uuid_setting_summary"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <!--
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
-->
</PreferenceScreen>